# authenticator

./: setup.cfg
src/authenticator/: cli.py
