[metadata]
name = authenticator
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A brief description of your project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SinkuKumar/authenticator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6

install_requires =
    cryptography = >=1.4,
    iso8601 = >=0.1.11

[options.packages.find]
where = src
